test/spec_vectors/align64/fail/module_70.wat
(module (memory i64 0) (func (drop (i32.load8_u align=2 (i64.const 0)))))